--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,27 @@
 
 /* Your CSS Code here. */
-.nav-bar{
-	padding : 0px;
-	margin : 0px;
-	background-color : #3333
-	overflow: hidden;
-	 list-style-type: none;
-	 padding: 14px 16px;
-	 margin-right: 20px;
-	
-}
-.nav-bar:last-child{
-	 margin-right: 0;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-.nav-ul{
-	float: left;
+header, nav, section, footer {
+    padding: 20px;
+    background-color: #f7f7f7;
+    margin: 10px;
+    border: 1px solid #ccc;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav li {
+    display: inline;
     margin-right: 20px;
 }
-.nav-bar ul{
-	
-	display : flex ;
-	justify-content: space-between;
-	text-align: 20px;
-    padding: 10px 10px;
-	overflow: hidden;
-	margin-right: 20px;
-	text-decoration: none;
-	list-style-type: none;
-	
-	
+nav a{
+	text-decoration : none;
 }
